--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,10 @@ table tr:nth-child(even) {
 }
 
 table tr:hover {
+  transition: background-color 0.3s ease; 
   background-color: #ddd;
 }
+
 
 table th {
   padding-top: 12px;
